<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Start_Menu">

    <ImageView
        android:id="@+id/imgBackgroundColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:contentDescription="@string/background_color_for_the_start_menu" />

    <LinearLayout
        android:id="@+id/outerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/scrollLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="80">

                    <ImageView
                        android:id="@+id/imgWoodenSign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/woodsign"
                        android:contentDescription="@string/wood_sign" />

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:text="@string/botanic"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                </FrameLayout>

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/architects_daughter"
                    android:onClick="toMainMenu"
                    android:paddingStart="20sp"
                    android:text="@string/start"
                    android:textColor="@color/darkTextColor"
                    android:textSize="40sp" />

            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/imgBackgroundBanner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/wheelbarrow"
            android:contentDescription="@string/wheelbarrow" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>